--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       display: flex;
       justify-content: center;
       margin-top: 10px;
-      width: 50px;
+      height:70px;
+      font-size: 3rem;
     }
 
     .arrow-button {
